--- a/emuStick/build.gradle
+++ b/emuStick/build.gradle
@@ -8,6 +8,10 @@ apply plugin: 'gradle-one-jar'
 
 version = "1.0.0-SNAPSHOT"
 
+task wrapper(type: Wrapper, description: 'Creates and deploys the Gradle wrapper to the current directory.') {
+    gradleVersion = '2.2.1'
+}
+
 buildscript {
     repositories {
         mavenCentral()
